[metadata]
name = astutus
version = 0.1.3
description = A demonstration of the state of my python skills.
author = Rich Dobbs
author-email = rich.dobbs.13440@gmail.com
license = 'BSD 3-Clause License'
url = https://github.com/rich-dobbs-13440/astutus/

[options]
install_requires =
  Flask
  sphinx
  sphinx_rtd_theme
  flask_sqlalchemy
  colorama
  serial
  treelib
  webcolors
