[metadata]
name = astutus
description = Use the Sphinx RTD Theme to create a beautiful Flask application.
author = Rich Dobbs
author-email = rich.dobbs.13440@gmail.com
license = 'BSD 3-Clause License'
url = https://github.com/rich-dobbs-13440/astutus/

[options]
install_requires =
  Flask
  sphinx
  sphinx_rtd_theme
  flask_sqlalchemy
  pyserial
  wheel
  treelib
  webcolors
  pymemcache
